downstream-clusters/base/patch-merchant-nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: merchant-portal
spec:
  template:
    spec:
      containers:
        - name: merchant-portal
          volumeMounts:
            - name: nginx-conf
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: default.conf
      volumes:
        - name: nginx-conf
          configMap:
            name: merchant-nginx-conf
